# planetPlotter

./: .gitignore  README.md  command.txt  compass.txt  contours.py  gpib.py  gpibtest.py  libmacosx_gpib_lib.dylib  make_command.py  make_plot.py  measat_releaseX1.8.hex  plot.py  plot_command.py  serializer.py  setup.cfg  setup.py  test_plot.py
data/: M101.ctr  M104.ctr  M51.ctr  M64.ctr  cygX1.ctr  kepler.json  linear.ctr  planets_2020.03.14_13.39.11.csv  taylor.ctr
gpib/: INSTALL  README
src/hplotter/: __init__.py  contours.py  get_planets.py  plot_command.py
