[metadata]
name = hplotter
description = Planet plotting with HP7470A printer
long_description = file: README.md
author = A.L.Peirson
author_email = alpv95@stanford.edu
url = https://github.com/alpv95/planetPlotter
license = MIT License

[options]
zip_safe = False
package_dir=
    =src
packages=find:
install_requires =
    tqdm
    svgpathtools
    importlib-metadata; python_version<"3.0"

[options.packages.find]
where=src